<resources>
    <string name="app_name">SensorData</string>
    <string name="action_settings">Export</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speed">Geschwindigkeit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_hader_desc">Navigation header</string>
    <string name="title_activity_maptest">maptest</string>
    <string name="title_activity_maps">Map</string>
    <string name="acceleration">Beschleunigung</string>
    <string name="travel">Fahrzeit</string>
    <string name="route">Strecke</string>
    <string name="altitude">Höhenmeter</string>
    <string name="direction">Fahrtrichtung</string>
    <string name="title_activity_accelo_speed_">accelo_speed_Activity</string>
<<<<<<< HEAD

=======
    <string name="acceleration">Beschleunigung</string>
    <string name="travel">Fahrzeit</string>
    <string name="route">Strecke</string>
    <string name="altitude">Höhenmeter</string>
    <string name="direction">Fahrtrichtung</string>
    <string name="dashboard">Dashboard</string>
>>>>>>> 8420ce8953d50fb8f012ade79619f4b3e42d95d0
</resources>
